array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niv=0
  for (k<-1 to num.length) {
    if (num(k-1)<num(k)) {
      niv=niv+1
    }
  }
  retrun niv
}